--- a/RockPaperScissors/Base.lproj/Main.storyboard
+++ b/RockPaperScissors/Base.lproj/Main.storyboard
@@ -19,24 +19,24 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="ljZ-qb-xWD">
-                                <rect key="frame" x="50" y="94" width="314" height="502"/>
+                                <rect key="frame" x="50" y="134" width="314" height="487"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rock" translatesAutoresizingMaskIntoConstraints="NO" id="EK2-kf-3h4">
-                                        <rect key="frame" x="0.0" y="0.0" width="314" height="167.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="314" height="162.5"/>
                                         <gestureRecognizers/>
                                         <connections>
                                             <outletCollection property="gestureRecognizers" destination="EWE-b3-EtV" appends="YES" id="Y96-Gc-Yb2"/>
                                         </connections>
                                     </imageView>
                                     <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="paper" translatesAutoresizingMaskIntoConstraints="NO" id="OMu-wG-V7w">
-                                        <rect key="frame" x="0.0" y="167.5" width="314" height="167"/>
+                                        <rect key="frame" x="0.0" y="162.5" width="314" height="162"/>
                                         <gestureRecognizers/>
                                         <connections>
                                             <outletCollection property="gestureRecognizers" destination="hRc-dN-bJw" appends="YES" id="9Ao-Oq-GDm"/>
                                         </connections>
                                     </imageView>
                                     <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="scissors" translatesAutoresizingMaskIntoConstraints="NO" id="NWs-Ru-kOJ">
-                                        <rect key="frame" x="0.0" y="334.5" width="314" height="167.5"/>
+                                        <rect key="frame" x="0.0" y="324.5" width="314" height="162.5"/>
                                         <gestureRecognizers/>
                                         <connections>
                                             <outletCollection property="gestureRecognizers" destination="5tf-aI-hMc" appends="YES" id="orG-Xu-an0"/>
@@ -58,12 +58,29 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m0S-ep-VqX">
+                                <rect key="frame" x="188" y="832" width="38" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Rules">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="onRulesPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gLU-Rn-eqc"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vkM-yk-5QW">
+                                <rect key="frame" x="190" y="70" width="34" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Start">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="ljZ-qb-xWD" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="50" id="1mt-bP-y8u"/>
+                            <constraint firstItem="ljZ-qb-xWD" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="90" id="1mt-bP-y8u"/>
                             <constraint firstAttribute="trailing" secondItem="ljZ-qb-xWD" secondAttribute="trailing" constant="50" id="59s-FL-wMu"/>
-                            <constraint firstAttribute="bottom" secondItem="ljZ-qb-xWD" secondAttribute="bottom" constant="300" id="eta-4E-PlH"/>
+                            <constraint firstAttribute="bottom" secondItem="ljZ-qb-xWD" secondAttribute="bottom" constant="275" id="eta-4E-PlH"/>
                             <constraint firstItem="ljZ-qb-xWD" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="nCW-Pg-fWw"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
